# dedupe_yara_rule-rs

./: .gitignore  Cargo.toml  README.md  compile_all.sh  skip_rules.txt
.cargo/: config
ProdYaraRules/cf_documents/: cf_rtf-CVE-2017–11882
src/: cli.rs  lib.rs  main.rs  nom.rs  utils.rs
