[package]
name = "yara_dedupe"
description = "Dedup yara rules and compile"
authors = ["Marirs <marirs@gmail.com>"]
version = "0.2.0"
keywords = ["yara", "rules", "dedupe"]
readme = "README.md"
license-file = "LICENSE"
edition="2018"

[dependencies]
clap = "3.1.8"
nom = "7.0.0"
regex = "1.5.4"
#yara = "0.9.0"
yara = { version = "0.13.0", features = ["serde", "vendored"] }

[[bin]]
name = "yara_dedupe"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true