[package]
name = "yara_dedupe"
description = "Dedup yara rules and compile"
authors = ["Marirs <marirs@gmail.com>"]
version = "0.3.0"
keywords = ["yara", "rules", "dedupe"]
readme = "README.md"
license-file = "LICENSE"
edition="2021"

[dependencies]
clap = "3.1.8"
nom = "7.1.1"
regex = "1.5.5"
yara-x = "0.3.0"

[[bin]]
name = "yara_dedupe"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
