[package]
name = "yara_dedupe"
description = "Dedup yara rules and compile"
authors = ["Marirs <marirs@gmail.com>"]
version = "0.4.0"
keywords = ["yara", "rules", "dedupe"]
readme = "README.md"
license-file = "LICENSE"
edition="2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
filepath = "0.1.2"
nom = "7.1"
regex = "1"
yara-x = { version = "0.10.0", default-features = true, features = ["magic-module"] }

[[bin]]
name = "yara_dedupe"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
